force-app/main/default/objects/CountryMappings__c/CountryMappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Country, ISO Code and Region.  Source for data Ref: http://data.okfn.org/data/core/country-codes</description>
    <label>Country</label>
</CustomObject>