force-app/main/default/objects/CountryMappings__c/fields/Alpha_2__c.field-meta.xml
<CustomField>
    <fullName>Alpha_2__c</fullName>
    <label>ISO 3166-1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>