force-app/main/default/objects/CountryMappings__c/fields/Alpha_3__c.field-meta.xml
<CustomField>
    <fullName>Alpha_3__c</fullName>
    <label>World Bank Codes</label>
    <length>3</length>
    <type>Text</type>
</CustomField>