force-app/main/default/objects/CountryMappings__c/fields/Category_1_Country__c.field-meta.xml
<CustomField>
    <fullName>Category_1_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Category 1 Country</label>
    <type>Checkbox</type>
</CustomField>