force-app/main/default/objects/CountryMappings__c/fields/Chargeback_Fee_With_Document__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Fee_With_Document__c</fullName>
    <label>Chargeback Fee With Document</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>