force-app/main/default/objects/CountryMappings__c/fields/currency_alphabetic_code__c.field-meta.xml
<CustomField>
    <fullName>currency_alphabetic_code__c</fullName>
    <label>ISO 4217 currency code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>