force-app/main/default/objects/CountryMappings__c/fields/currency_country_name__c.field-meta.xml
<CustomField>
    <fullName>currency_country_name__c</fullName>
    <label>ISO 4217 country name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>