force-app/main/default/objects/CountryMappings__c/fields/currency_minor_unit__c.field-meta.xml
<CustomField>
    <fullName>currency_minor_unit__c</fullName>
    <label>ISO 4217 minor units</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>