force-app/main/default/objects/CountryMappings__c/fields/currency_name__c.field-meta.xml
<CustomField>
    <fullName>currency_name__c</fullName>
    <label>ISO 4217 name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>