force-app/main/default/objects/CountryMappings__c/fields/currency_numeric_code__c.field-meta.xml
<CustomField>
    <fullName>currency_numeric_code__c</fullName>
    <label>ISO 4217 numeric code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>