force-app/main/default/objects/CountryMappings__c/fields/Dial__c.field-meta.xml
<CustomField>
    <fullName>Dial__c</fullName>
    <label>ITU-T recommendation E.164</label>
    <length>20</length>
    <type>Text</type>
</CustomField>