force-app/main/default/objects/CountryMappings__c/fields/DS__c.field-meta.xml
<CustomField>
    <fullName>DS__c</fullName>
    <label>vehicles in international traffic</label>
    <length>4</length>
    <type>Text</type>
</CustomField>