force-app/main/default/objects/CountryMappings__c/fields/EFT_Default_Payment__c.field-meta.xml
<CustomField>
    <fullName>EFT_Default_Payment__c</fullName>
    <label>EFT Default Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>