force-app/main/default/objects/CountryMappings__c/fields/EFT_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>EFT_Subscription_Fee__c</fullName>
    <label>EFT Subscription Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>