force-app/main/default/objects/CountryMappings__c/fields/Enett_Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Enett_Default_Currency__c</fullName>
    <label>Enett Default Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>