force-app/main/default/objects/CountryMappings__c/fields/Enett_Default_Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Enett_Default_Currency_Symbol__c</fullName>
    <description>Holds the currency symbol to be used on the external registration form.</description>
    <label>Enett Default Currency Symbol</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>