force-app/main/default/objects/CountryMappings__c/fields/FIFA__c.field-meta.xml
<CustomField>
    <fullName>FIFA__c</fullName>
    <label>FIFA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>