force-app/main/default/objects/CountryMappings__c/fields/FIPS__c.field-meta.xml
<CustomField>
    <fullName>FIPS__c</fullName>
    <label>U.S. standard FIPS PUB 10-4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>