force-app/main/default/objects/CountryMappings__c/fields/GAUL__c.field-meta.xml
<CustomField>
    <fullName>GAUL__c</fullName>
    <label>Global Administrative Unit Layers</label>
    <length>10</length>
    <type>Text</type>
</CustomField>