force-app/main/default/objects/CountryMappings__c/fields/IOC__c.field-meta.xml
<CustomField>
    <fullName>IOC__c</fullName>
    <label>International Olympics Committee</label>
    <length>4</length>
    <type>Text</type>
</CustomField>