force-app/main/default/objects/CountryMappings__c/fields/is_independent__c.field-meta.xml
<CustomField>
    <fullName>is_independent__c</fullName>
    <label>CIA World Factbook status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>