force-app/main/default/objects/CountryMappings__c/fields/IsApprovedCountry__c.field-meta.xml
<CustomField>
    <fullName>IsApprovedCountry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApprovedCountry</label>
    <type>Checkbox</type>
</CustomField>