force-app/main/default/objects/CountryMappings__c/fields/ISO2__c.field-meta.xml
<CustomField>
    <fullName>ISO2__c</fullName>
    <externalId>true</externalId>
    <label>ISO2</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>