force-app/main/default/objects/CountryMappings__c/fields/ISO3166_1__c.field-meta.xml
<CustomField>
    <fullName>ISO3166_1__c</fullName>
    <label>ISO 3166-1 M49 Codes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>