force-app/main/default/objects/CountryMappings__c/fields/ISO3__c.field-meta.xml
<CustomField>
    <fullName>ISO3__c</fullName>
    <externalId>true</externalId>
    <label>ISO3</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>