force-app/main/default/objects/CountryMappings__c/fields/ITU__c.field-meta.xml
<CustomField>
    <fullName>ITU__c</fullName>
    <label>International Telecommunications Union</label>
    <length>3</length>
    <type>Text</type>
</CustomField>