force-app/main/default/objects/CountryMappings__c/fields/MARC__c.field-meta.xml
<CustomField>
    <fullName>MARC__c</fullName>
    <label>Library of Congress</label>
    <length>20</length>
    <type>Text</type>
</CustomField>