force-app/main/default/objects/CountryMappings__c/fields/name_fr__c.field-meta.xml
<CustomField>
    <fullName>name_fr__c</fullName>
    <label>Country&#39;s offical French short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>