force-app/main/default/objects/CountryMappings__c/fields/Reverse_Inquiry_Required__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Inquiry_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Inquiry Required</label>
    <type>Checkbox</type>
</CustomField>