force-app/main/default/objects/CountryMappings__c/fields/Sub_Region_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region_2__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>The second-level of sub region for the country</description>
    <inlineHelpText>The second-level of sub region for the country</inlineHelpText>
    <label>Sub Region 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>