force-app/main/default/objects/CountryMappings__c/fields/VANs_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>VANs_Subscription_Fee__c</fullName>
    <description>Monthly Price of VANs</description>
    <label>VANs Subscription Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>