force-app/main/default/objects/CountryMappings__c/fields/WMO__c.field-meta.xml
<CustomField>
    <fullName>WMO__c</fullName>
    <label>World Meteorological Organization</label>
    <length>3</length>
    <type>Text</type>
</CustomField>