force-app/main/default/objects/CountryMappings__c/listViews/Country_Codes.listView-meta.xml
<ListView>
    <fullName>Country_Codes</fullName>
    <columns>NAME</columns>
    <columns>ISO2__c</columns>
    <columns>ISO3__c</columns>
    <columns>Alpha_2__c</columns>
    <columns>ISO3166_1__c</columns>
    <columns>currency_country_name__c</columns>
    <columns>currency_alphabetic_code__c</columns>
    <columns>currency_minor_unit__c</columns>
    <columns>currency_name__c</columns>
    <columns>currency_numeric_code__c</columns>
    <columns>Reverse_Inquiry_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>Country Codes</label>
</ListView>